# confess_it

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/example_package_salad/: main.py
src/example_package_salad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
