[project]
name = "example_package_salad"
version = "0.0.4"
authors = [
  { name="salad", email="ron52086@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/salads-source/confessit_test"
Issues = "https://github.com/salads-source/confessit_test/issues"